--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,12 +1,12 @@
 click==8.1.3
 colorama==0.4.5
-deta==1.1.0
-Flask==2.1.2
+Flask==2.2.1
 Flask-Cors==3.0.10
+gunicorn==20.1.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
-Pillow==9.1.1
+Pillow==9.2.0
 python-dotenv==0.20.0
 six==1.16.0
-Werkzeug==2.1.2
+Werkzeug==2.2.1
