--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,7 +2,7 @@
     "version": 2,
     "builds": [
         {
-            "src": "./application/__init__.py",
+            "src": "./index.py",
             "use": "@vercel/python"
         }
     ],
