--- a/backend/.vscode/settings.json
+++ b/backend/.vscode/settings.json
@@ -4,5 +4,5 @@
   ],
   "python.linting.flake8Enabled": true,
   "python.linting.enabled": true,
-  "python.formatting.provider": "black"
+  "python.formatting.provider": "autopep8"
 }
